<resources>
    <string name="app_name">ProyectoFinal</string>

    <!--TextView-->
    <string name="txt_login">Login</string>
    <string name="txt_sign_up">Registro de Usuarios</string>
    <string name="txt_user">User</string>
    <string name="txt_password">Password</string>
    <string name="txt_name">Nombre</string>
    <string name="txt_last_name">Apellido</string>
    <string name="txt_email">Correo Electronico</string>
    <string name="txt_pass">Clave</string>
    <string name="txt_pass_confirm">Confirmar Clave</string>
    <string name="txt_congratulation">Felicidades.</string>
    <string name="txt_confirm_text">Ahora puedes acceder a nuestra Aplicacion. Pulsa el Boton para seguir con la experiencia de nuestra aplicacion</string>

    <!--Button-->
    <string name="btn_login_text">Ingresar</string>
    <string name="btn_sign_up_text">Registrarse</string>
    <string name="btn_exit_text">Salir</string>
    <string name="btn_continue">Continuar</string>

    <!--EditText-->
    <string name="edtxt_user">Ingrese el Usuario</string>
    <string name="edtxt_password">Ingrese la Clave</string>

</resources>