<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fondo_2"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ivory"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/abhaya_libre_medium"
                android:textSize="@dimen/txt_name_size_title_1"
                android:text="@string/txt_sign_up"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre_medium"
                android:textSize="@dimen/txt_name_size_title_2"
                android:text="@string/txt_name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre_medium"
                android:textSize="@dimen/txt_name_size_title_2"
                android:text="@string/txt_last_name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre_medium"
                android:textSize="@dimen/txt_name_size_title_2"
                android:text="@string/txt_email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre_medium"
                android:textSize="@dimen/txt_name_size_title_2"
                android:text="@string/txt_pass"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up_text"
                android:backgroundTint="@color/midnight_green"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>