<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/fondo_1"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:id="@+id/linear_img"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_view_login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_login"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/logo"
                app:shapeAppearance="@style/img_shape_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:backgroundTint="@color/ivory"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/linear_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ivory"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_login_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/libre_baskerville_bold"
                    android:text="@string/txt_login"
                    android:textSize="@dimen/txt_name_size_title_3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/textField_user"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sanchez"
                    android:hint="@string/edtxt_user"
                    app:hintTextColor="@color/hunter_green"
                    app:boxStrokeColor="@color/office_green"
                    app:layout_constraintTop_toBottomOf="@id/txt_login_login"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/textField_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtxt_login_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txt_name_size_title_3"
                        app:layout_constraintTop_toBottomOf="@id/txt_login_login"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/textField_password"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sanchez"
                    android:hint="@string/edtxt_password"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/hunter_green"
                    app:boxStrokeColor="@color/office_green"
                    app:layout_constraintTop_toBottomOf="@id/textField_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/btn_login_sign_in">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtxt_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txt_name_size_title_3"
                        android:inputType="textPassword"
                        app:layout_constraintTop_toBottomOf="@id/textField_user"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/btn_login_sign_in"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    style="@style/btn_login"
                    android:id="@+id/btn_login_sign_in"
                    app:layout_constraintTop_toBottomOf="@id/textField_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_login_sign_up"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <Button
                    style="@style/btn_sign_up"
                    android:id="@+id/btn_login_sign_up"
                    app:layout_constraintTop_toBottomOf="@id/textField_password"
                    app:layout_constraintStart_toEndOf="@id/btn_login_sign_in"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>